Typos, Automated IDE-fixes